# event-store-cpp

./: CMakeLists.txt  Makefile  README.md
include/: event.h  event_iterator.h  event_store.h
src/: event_iterator.cc  event_store.cc  main.cc
test/: CMakeLists.txt  Makefile  README.md  googletest
test/src/: test.cc
